--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ h1{
     color: black;
 }
 img {
-    width: 500px;
+    width: 100%;
     height: auto;
     display: inline-block;
     padding: 10px;
